# NO-LIB-WINAPI

./: CMakeLists.txt  README.MD  main.c
src/: Winblows.h  defines.c  defines.h
src/ApiHashing/: ApiHashing.c  ApiHashing.h
src/Utilities/: string_utilities.c  string_utilities.h
